@@ -1,3 +1,6 @@
+2006-12-09 Added linewidth kwarg to bar and barh; fixed arg
+           checking bugs - EF
+
 2006-12-07 Made pcolormesh argument handling match pcolor;
            fixed kwarg handling problem noted by Pierre GM - EF
 
